// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class: NseIndia ApiList should return content for ALL_INDICES: API Response Validation 1`] = `
Array [
  Object {
    "data": Array [
      "key: any",
      "index: any",
      "indexSymbol: any",
      "last: any",
      "variation: any",
      "percentChange: any",
      "open: any",
      "high: any",
      "low: any",
      "previousClose: any",
      "yearHigh: any",
      "yearLow: any",
      "pe: any",
      "pb: any",
      "dy: any",
      "declines: any",
      "advances: any",
      "unchanged: any",
      "perChange365d: any",
      "date365dAgo: any",
      "chart365dPath: any",
      "date30dAgo: any",
      "perChange30d: any",
      "chart30dPath: any",
      "chartTodayPath: any",
      "previousDay: any",
      "oneWeekAgo: any",
      "oneMonthAgo: any",
      "oneYearAgo: any",
    ],
  },
  "timestamp: any",
  "advances: any",
  "declines: any",
  "unchanged: any",
  Object {
    "dates": Array [
      "previousDay: any",
      "oneWeekAgo: any",
      "oneMonthAgo: any",
      "oneYearAgo: any",
    ],
  },
  "date30dAgo: any",
  "date365dAgo: any",
]
`;

exports[`Class: NseIndia ApiList should return content for CIRCULARS: API Response Validation 1`] = `
Array [
  Object {
    "data": Array [
      "fileDept: any",
      "circNumber: any",
      "fileExt: any",
      "sub: any",
      "cirDate: any",
      "cirDisplayDate: any",
      "circFilename: any",
      "circFilelink: any",
      "circCompany: any",
      "circDisplayNo: any",
      "circCategory: any",
      "circDepartment: any",
    ],
  },
  "fromDate: any",
  "toDate: any",
]
`;

exports[`Class: NseIndia ApiList should return content for EQUITY_MASTER: API Response Validation 1`] = `
Array [
  Object {
    "Broad Market Indices": "any",
  },
  Object {
    "Sectoral Indices": "any",
  },
  Object {
    "Thematic Indices": "any",
  },
  Object {
    "Strategy Indices": "any",
  },
  Object {
    "Others": "any",
  },
]
`;

exports[`Class: NseIndia ApiList should return content for GLOSSARY: API Response Validation 1`] = `
Array [
  Object {
    "content": Array [
      "title: any",
      "body: any",
      Object {
        "field_glossary_items": Array [
          "American Depository Receipt (ADR): any",
        ],
      },
      Object {
        "field_labels": "any",
      },
      "field_reference: any",
      "field_unique_url: any",
    ],
  },
  "id: any",
  "type: any",
  "changed: any",
]
`;

exports[`Class: NseIndia ApiList should return content for HOLIDAY_CLEARING: API Response Validation 1`] = `
Array [
  Object {
    "CD": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "CM": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "FO": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "IRD": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "MFSS": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "SLBS": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
]
`;

exports[`Class: NseIndia ApiList should return content for HOLIDAY_TRADING: API Response Validation 1`] = `
Array [
  Object {
    "CBM": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "CD": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "CM": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "CMOT": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "COM": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "FO": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "IRD": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "MF": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "NDM": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "NTRP": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
  Object {
    "SLBS": Array [
      "tradingDate: any",
      "weekDay: any",
      "description: any",
      "Sr_no: any",
    ],
  },
]
`;

exports[`Class: NseIndia ApiList should return content for INDEX_NAMES: API Response Validation 1`] = `
Array [
  Object {
    "stn": "any",
  },
  Object {
    "nts": "any",
  },
]
`;

exports[`Class: NseIndia ApiList should return content for LATEST_CIRCULARS: API Response Validation 1`] = `
Array [
  Object {
    "0": Array [
      Object {
        "content": Array [
          "title: any",
          "field_body: any",
          Object {
            "field_latest_circular": Array [
              "field_body: any",
              "name: any",
              "field_nse_circular_date: any",
              Object {
                "field_nse_file_attachement": Array [
                  "url: any",
                  "desc: any",
                ],
              },
              "field_sebi_circular_date: any",
              Object {
                "field_sebi_file_attachement": Array [
                  "url: any",
                  "desc: any",
                ],
              },
            ],
          },
          "field_unique_url: any",
        ],
      },
      "id: any",
      "type: any",
      "changed: any",
    ],
  },
]
`;

exports[`Class: NseIndia ApiList should return content for MARKET_DATA_PRE_OPEN: API Response Validation 1`] = `
Array [
  "declines: any",
  "unchanged: any",
  Object {
    "data": Array [
      Object {
        "metadata": Array [
          "symbol: any",
          "identifier: any",
          "purpose: any",
          "lastPrice: any",
          "change: any",
          "pChange: any",
          "previousClose: any",
          "finalQuantity: any",
          "totalTurnover: any",
          "marketCap: any",
          "yearHigh: any",
          "yearLow: any",
          "iep: any",
          "chartTodayPath: any",
        ],
      },
      Object {
        "detail": Array [
          Object {
            "preOpenMarket": Array [
              Object {
                "preopen": Array [
                  "price: any",
                  "buyQty: any",
                  "sellQty: any",
                ],
              },
              Object {
                "ato": Array [
                  "totalBuyQuantity: any",
                  "totalSellQuantity: any",
                ],
              },
              "IEP: any",
              "totalTradedVolume: any",
              "finalPrice: any",
              "finalQuantity: any",
              "lastUpdateTime: any",
              "totalSellQuantity: any",
              "totalBuyQuantity: any",
              "atoBuyQty: any",
              "atoSellQty: any",
            ],
          },
        ],
      },
    ],
  },
  "advances: any",
  "timestamp: any",
  "totalTradedValue: any",
  "totalmarketcap: any",
  "totalTradedVolume: any",
]
`;

exports[`Class: NseIndia ApiList should return content for MARKET_STATUS: API Response Validation 1`] = `
Array [
  Object {
    "marketState": Array [
      "market: any",
      "marketStatus: any",
      "tradeDate: any",
      "index: any",
      "last: any",
      "variation: any",
      "percentChange: any",
      "marketStatusMessage: any",
    ],
  },
]
`;

exports[`Class: NseIndia ApiList should return content for MARKET_TURNOVER: API Response Validation 1`] = `
Array [
  Object {
    "data": Array [
      "name: any",
      Object {
        "yesterday": Array [
          "volume: any",
          "value: any",
          "openInterest: any",
        ],
      },
      Object {
        "today": Array [
          "volume: any",
          "value: any",
          "oivalue: any",
          "date: any",
        ],
      },
    ],
  },
  "derivativeToCashRatio: any",
  "maxDate: any",
]
`;

exports[`Class: NseIndia ApiList should return content for MERGED_DAILY_REPORTS_CAPITAL: API Response Validation 1`] = `
Array [
  Object {
    "0": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "1": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "2": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "3": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "4": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "5": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "6": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "7": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "8": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
]
`;

exports[`Class: NseIndia ApiList should return content for MERGED_DAILY_REPORTS_DEBT: API Response Validation 1`] = `
Array [
  Object {
    "0": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "1": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "2": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
]
`;

exports[`Class: NseIndia ApiList should return content for MERGED_DAILY_REPORTS_DERIVATIVES: API Response Validation 1`] = `
Array [
  Object {
    "0": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "1": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "2": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "3": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "4": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "5": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "6": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "7": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
  Object {
    "8": Array [
      "name: any",
      "type: any",
      "category: any",
      "section: any",
      "link: any",
    ],
  },
]
`;

exports[`Class: NseIndia getEquityCorporateInfo: API Response Validation 1`] = `
Array [
  Object {
    "corporate": Array [
      Object {
        "announcements": Array [
          "desc: any",
          "attchmntText: any",
          "attchmntFile: any",
          "an_dt: any",
        ],
      },
      Object {
        "boardMeetings": Array [
          "bm_purpose: any",
          "bm_desc: any",
          "attachment: any",
          "bm_date: any",
          "bm_timestamp: any",
        ],
      },
      Object {
        "corporateActions": Array [
          "series: any",
          "faceVal: any",
          "subject: any",
          "exDate: any",
          "recDate: any",
          "bcStartDate: any",
          "bcEndDate: any",
          "ndStartDate: any",
          "ndEndDate: any",
        ],
      },
      Object {
        "governance": Array [
          Object {
            "metadata": Array [
              "date: any",
              "xbrl: any",
              "cgTimeStamp: any",
              "recordId: any",
            ],
          },
          Object {
            "detail": Array [
              "title: any",
              "directorName: any",
              "din: any",
              "category: any",
              "date: any",
              "dateOfCessation: any",
              "tenure: any",
              "noOfDirShp: any",
              "noOfMemberships: any",
              "noOfChairperson: any",
              "dateOfAppointment: any",
              "dateOfInitialAppo: any",
              "dob: any",
              "dirIsdisqualified: any",
              "startdateOfdisqualification: any",
              "enddateOfdisqualification: any",
              "detailsOfdisqualification: any",
              "status: any",
              "noOfindpntDirShp: any",
              "splresolution: any",
              "dateOfsplresolution: any",
              "membershipinCommofCompany: any",
            ],
          },
        ],
      },
      Object {
        "financialResults": Array [
          "to_date: any",
          "income: any",
          "audited: any",
          "reProLossBefTax: any",
          "proLossAftTax: any",
          "reDilEPS: any",
          "na_attachment: any",
          "xbrl_attachment: any",
          "re_broadcast_timestamp: any",
        ],
      },
      Object {
        "shareholdingPatterns": Array [
          Object {
            "cols": "any",
          },
          Object {
            "data": Array [
              "name: any",
              "31-Dec-2022: any",
              "30-Sep-2022: any",
              "30-Jun-2022: any",
              "31-Mar-2022: any",
              "31-Dec-2021: any",
            ],
          },
        ],
      },
      Object {
        "insiderTrading": Array [
          "symbol: any",
          "companyName: any",
          "anex: any",
          "acqName: any",
          "secType: any",
          "secAcq: any",
          "secVal: any",
          "tdpTransactionType: any",
          "date: any",
          "xbrl: any",
        ],
      },
      Object {
        "sastRegulations_29": Array [
          "regType: any",
          "acquirerName: any",
          "acquirerDate: any",
          "noOfShareAcq: any",
          "noOfShareSale: any",
          "noOfShareAft: any",
          "attachement: any",
          "timestamp: any",
        ],
      },
      Object {
        "sastRegulations_3132Post": "any",
      },
      Object {
        "votingResults": Array [
          Object {
            "metadata": Array [
              "timestamp: any",
              "meetingType: any",
              "resolution: any",
              "resReq: any",
              "totSharesOnRec: any",
              "totPercFor: any",
              "totPercAgainst: any",
              "xbrlFilename: any",
            ],
          },
          Object {
            "detail": Array [
              "vrGrpInterested: any",
              "vrTotSharesProPer: any",
              "vrTotSharesPublicPer: any",
              "vrTotSharesProVid: any",
              "vrTotSharesPublicVid: any",
              Object {
                "tableData": Array [
                  "category: any",
                  "tradingMode: any",
                  "noSharesHeld: any",
                  "noVotesPolled: any",
                  "voteOnOutstandShares: any",
                  "noVotesInFavour: any",
                  "noVotesAgainst: any",
                  "favouredVotesPer: any",
                  "votesAgainstPer: any",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "annualReport": Array [
          "companyName: any",
          "fromYr: any",
          "toYr: any",
          "fileName: any",
        ],
      },
      Object {
        "dailyBuyBack": "any",
      },
      Object {
        "companyDirectory": Array [
          "webAddress: any",
          "smName: any",
          "symbol: any",
          "office: any",
          "address: any",
          "city: any",
          "pincode: any",
          "telephone: any",
          "fax: any",
          "email: any",
        ],
      },
      Object {
        "transferAgentDetail": Array [
          "webAddress: any",
          "smName: any",
          "symbol: any",
          "office: any",
          "address: any",
          "city: any",
          "pincode: any",
          "telephone: any",
          "fax: any",
          "email: any",
        ],
      },
      Object {
        "investorComplaints": Array [
          "companyName: any",
          "date: any",
          "complBeg: any",
          "complRecv: any",
          "complDisp: any",
          "complUnres: any",
          "broadcastDate: any",
          "xbrl: any",
        ],
      },
      Object {
        "pledgedetails": Array [
          "symbol: any",
          "disclosureDate: any",
          "per1: any",
          "per2: any",
          "per3: any",
        ],
      },
      Object {
        "corpEncumbrance": "any",
      },
      Object {
        "secretarialCamp": Array [
          "scSymbol: any",
          "scCompanyName: any",
          "scFinancialYear: any",
          "scFromDate: any",
          "scToDate: any",
          "scAttachment: any",
          "scSecStatus: any",
          "scRevisedFlag: any",
          "scBroadcastDate: any",
          "scXbrl: any",
        ],
      },
    ],
  },
]
`;

exports[`Class: NseIndia getEquityDetails: API Response Validation 1`] = `
Array [
  Object {
    "info": Array [
      "symbol: any",
      "companyName: any",
      "industry: any",
      Object {
        "activeSeries": "any",
      },
      Object {
        "debtSeries": "any",
      },
      Object {
        "tempSuspendedSeries": "any",
      },
      "isFNOSec: any",
      "isCASec: any",
      "isSLBSec: any",
      "isDebtSec: any",
      "isSuspended: any",
      "isETFSec: any",
      "isDelisted: any",
      "isin: any",
      "isTop10: any",
      "identifier: any",
    ],
  },
  Object {
    "metadata": Array [
      "series: any",
      "symbol: any",
      "isin: any",
      "status: any",
      "listingDate: any",
      "industry: any",
      "lastUpdateTime: any",
      "pdSectorPe: any",
      "pdSymbolPe: any",
      "pdSectorInd: any",
    ],
  },
  Object {
    "securityInfo": Array [
      "boardStatus: any",
      "tradingStatus: any",
      "tradingSegment: any",
      "sessionNo: any",
      "slb: any",
      "classOfShare: any",
      "derivatives: any",
      Object {
        "surveillance": Array [
          "surv: any",
          "desc: any",
        ],
      },
      "faceValue: any",
      "issuedSize: any",
    ],
  },
  Object {
    "priceInfo": Array [
      "lastPrice: any",
      "change: any",
      "pChange: any",
      "previousClose: any",
      "open: any",
      "close: any",
      "vwap: any",
      "lowerCP: any",
      "upperCP: any",
      "pPriceBand: any",
      "basePrice: any",
      Object {
        "intraDayHighLow": Array [
          "min: any",
          "max: any",
          "value: any",
        ],
      },
      Object {
        "weekHighLow": Array [
          "min: any",
          "minDate: any",
          "max: any",
          "maxDate: any",
          "value: any",
        ],
      },
      "iNavValue: any",
      "checkINAV: any",
    ],
  },
  Object {
    "industryInfo": Array [
      "macro: any",
      "sector: any",
      "industry: any",
      "basicIndustry: any",
    ],
  },
  Object {
    "preOpenMarket": Array [
      Object {
        "preopen": Array [
          "price: any",
          "buyQty: any",
          "sellQty: any",
        ],
      },
      Object {
        "ato": Array [
          "buy: any",
          "sell: any",
        ],
      },
      "IEP: any",
      "totalTradedVolume: any",
      "finalPrice: any",
      "finalQuantity: any",
      "lastUpdateTime: any",
      "totalBuyQuantity: any",
      "totalSellQuantity: any",
      "atoBuyQty: any",
      "atoSellQty: any",
    ],
  },
]
`;

exports[`Class: NseIndia getEquityHistoricalData with Date range: API Response Validation 1`] = `
Array [
  Object {
    "0": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
]
`;

exports[`Class: NseIndia getEquityHistoricalData: API Response Validation 1`] = `
Array [
  Object {
    "0": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "1": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "2": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "3": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "4": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "5": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "6": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "7": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "8": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "9": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "10": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "11": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "12": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "13": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "14": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "15": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "16": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "17": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "18": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "19": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "20": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "21": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "22": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "23": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "24": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "25": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "26": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "27": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "28": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "29": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "30": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "31": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "32": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "33": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "34": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "35": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "36": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "37": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "38": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "39": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "40": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "41": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "42": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "43": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "44": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "45": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "46": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "47": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "48": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "49": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "50": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "51": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "52": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "53": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "54": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "55": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "56": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "57": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "58": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "59": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "60": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "61": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "62": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "63": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "64": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "65": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "66": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "67": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "68": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "69": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "70": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "71": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "72": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "73": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "74": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "75": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "76": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "77": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "78": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "79": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "80": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "81": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "82": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "83": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "84": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "85": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "86": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "87": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "88": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "89": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "90": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "91": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "92": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "93": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "94": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "95": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "96": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "97": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "98": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "99": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "100": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "101": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "102": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "103": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "104": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "105": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "106": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "107": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "108": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "109": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "110": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "111": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "112": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "113": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "114": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "115": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "116": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "117": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "118": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "119": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "120": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "121": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "122": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "123": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "124": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "125": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "126": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "127": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "128": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "129": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "130": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "131": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "132": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "133": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "134": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "135": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "136": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "137": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "138": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "139": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "140": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "141": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "142": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "143": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "144": Array [
      Object {
        "data": "any",
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "145": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "146": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "147": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "148": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "149": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "150": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
  Object {
    "151": Array [
      Object {
        "data": Array [
          "_id: any",
          "CH_SYMBOL: any",
          "CH_SERIES: any",
          "CH_MARKET_TYPE: any",
          "CH_TRADE_HIGH_PRICE: any",
          "CH_TRADE_LOW_PRICE: any",
          "CH_OPENING_PRICE: any",
          "CH_CLOSING_PRICE: any",
          "CH_LAST_TRADED_PRICE: any",
          "CH_PREVIOUS_CLS_PRICE: any",
          "CH_TOT_TRADED_QTY: any",
          "CH_TOT_TRADED_VAL: any",
          "CH_52WEEK_HIGH_PRICE: any",
          "CH_52WEEK_LOW_PRICE: any",
          "CH_TOTAL_TRADES: any",
          "CH_ISIN: any",
          "CH_TIMESTAMP: any",
          "TIMESTAMP: any",
          "createdAt: any",
          "updatedAt: any",
          "__v: any",
          "VWAP: any",
          "mTIMESTAMP: any",
        ],
      },
      Object {
        "meta": Array [
          Object {
            "series": "any",
          },
          "fromDate: any",
          "toDate: any",
          Object {
            "symbols": "any",
          },
        ],
      },
    ],
  },
]
`;

exports[`Class: NseIndia getEquityIntradayData: API Response Validation 1`] = `
Array [
  "identifier: any",
  "name: any",
  Object {
    "grapthData": "any",
  },
  "closePrice: any",
]
`;

exports[`Class: NseIndia getEquityIntradayData:preOpen: API Response Validation 1`] = `
Array [
  "identifier: any",
  "name: any",
  Object {
    "grapthData": "any",
  },
  "closePrice: any",
]
`;

exports[`Class: NseIndia getEquitySeries: API Response Validation 1`] = `
Array [
  Object {
    "data": "any",
  },
]
`;

exports[`Class: NseIndia getEquityStockIndices: API Response Validation 1`] = `
Array [
  "name: any",
  Object {
    "advance": Array [
      "declines: any",
      "advances: any",
      "unchanged: any",
    ],
  },
  "timestamp: any",
  Object {
    "data": Array [
      "priority: any",
      "symbol: any",
      "identifier: any",
      "open: any",
      "dayHigh: any",
      "dayLow: any",
      "lastPrice: any",
      "previousClose: any",
      "change: any",
      "pChange: any",
      "ffmc: any",
      "yearHigh: any",
      "yearLow: any",
      "totalTradedVolume: any",
      "totalTradedValue: any",
      "lastUpdateTime: any",
      "nearWKH: any",
      "nearWKL: any",
      "perChange365d: any",
      "date365dAgo: any",
      "chart365dPath: any",
      "date30dAgo: any",
      "perChange30d: any",
      "chart30dPath: any",
      "chartTodayPath: any",
    ],
  },
  Object {
    "metadata": Array [
      "indexName: any",
      "open: any",
      "high: any",
      "low: any",
      "previousClose: any",
      "last: any",
      "percChange: any",
      "change: any",
      "timeVal: any",
      "yearHigh: any",
      "yearLow: any",
      "totalTradedVolume: any",
      "totalTradedValue: any",
      "ffmc_sum: any",
    ],
  },
  Object {
    "marketStatus": Array [
      "market: any",
      "marketStatus: any",
      "tradeDate: any",
      "index: any",
      "last: any",
      "variation: any",
      "percentChange: any",
      "marketStatusMessage: any",
    ],
  },
  "date30dAgo: any",
  "date365dAgo: any",
]
`;

exports[`Class: NseIndia getEquityTradeInfo: API Response Validation 1`] = `
Array [
  "noBlockDeals: any",
  Object {
    "bulkBlockDeals": Array [
      "name: any",
    ],
  },
  Object {
    "marketDeptOrderBook": Array [
      "totalBuyQuantity: any",
      "totalSellQuantity: any",
      Object {
        "bid": Array [
          "price: any",
          "quantity: any",
        ],
      },
      Object {
        "ask": Array [
          "price: any",
          "quantity: any",
        ],
      },
      Object {
        "tradeInfo": Array [
          "totalTradedVolume: any",
          "totalTradedValue: any",
          "totalMarketCap: any",
          "ffmc: any",
          "impactCost: any",
        ],
      },
      Object {
        "valueAtRisk": Array [
          "securityVar: any",
          "indexVar: any",
          "varMargin: any",
          "extremeLossMargin: any",
          "adhocMargin: any",
          "applicableMargin: any",
        ],
      },
    ],
  },
  Object {
    "securityWiseDP": Array [
      "quantityTraded: any",
      "deliveryQuantity: any",
      "deliveryToTradedQuantity: any",
      "seriesRemarks: any",
      "secWiseDelPosDate: any",
    ],
  },
]
`;

exports[`Class: NseIndia getIndexHistoricalData: API Response Validation 1`] = `
Array [
  "indexSymbol: any",
  "fromDate: any",
  "toDate: any",
  Object {
    "historicalData": Array [
      "date: any",
      "open: any",
      "high: any",
      "low: any",
      "close: any",
      "volume: any",
      "turnoverInCrore: any",
    ],
  },
]
`;

exports[`Class: NseIndia getIndexIntradayData: API Response Validation 1`] = `
Array [
  "identifier: any",
  "name: any",
  Object {
    "grapthData": "any",
  },
  "closePrice: any",
]
`;

exports[`Class: NseIndia getIndexIntradayData:preOpen: API Response Validation 1`] = `
Array [
  "identifier: any",
  "name: any",
  Object {
    "grapthData": "any",
  },
  "closePrice: any",
]
`;
